--- a/app/views/tmpl/interfacelist.html
+++ b/app/views/tmpl/interfacelist.html
@@ -47,7 +47,7 @@
                                       <th> Created By </th>
                                     </tr>
                                   
-									<tr ng-repeat="x in interfaces | orderBy: '-updatedDate' | orderBy: '-updatedTime'">
+									<tr ng-repeat="x in interfaces | orderBy: '-updatedDate'">
 										<td  ng-click="viewflow(x.interface_name)"><font color="#616f77"><span class="tab"><a style="cursor:default">{{x.interface_name}}</a></span></font></td>
 										<td>{{x.createdDate || ''}} - {{x.createdtime || ''}} </td>
 										<td>{{x.updatedDate || ''}} - {{x.updatedTime || ''}} </td>
