--- a/app/views/tmpl/config.html
+++ b/app/views/tmpl/config.html
@@ -80,7 +80,7 @@ border: 3px solid #22beef !important;
  <div ng-controller="AccordionDemoCtrl">
 
               <uib-tabset class="tabs-dark" justified="true">
-                <uib-tab heading="Centralised Parameters">			 
+                <uib-tab heading="Global Parameters">			 
 				 <div ng-controller="AccordionDemoCtrl1">
 					 <form  ng-submit="submit()">
 				 <div class="row">
@@ -137,17 +137,17 @@ border: 3px solid #22beef !important;
 				 </div>
 				  <div class="row">
 				 <div class="col-sm-6">
-				  <div class="form-group">
+				<!--   <div class="form-group">
                                             <label for="exampleInputEmail1">SVN Username</label>
                                            <input type="text" placeholder="SVNUserName"  name="SVNUserName" class="form-control underline-input" ng-model="SVNUserName" required>
-                                        </div>
+                                        </div> -->
 				 </div>
-				  <div class="col-sm-6">
+				 <!--  <div class="col-sm-6">
 				   <div class="form-group">
                                             <label for="exampleInputEmail1">SVN Password</label>
                                            <input type="password" placeholder="SVNPassword"  name="SVNPassword" class="form-control underline-input" ng-model="SVNPassword" required>
                                         </div>
-				  </div>
+				  </div> -->
 				 </div>
 				   <button type="submit" class="btn btn-blue mb-10 col-sm-1 "><b> Submit </b></button>
                                       <br>
