--- a/app/views/tmpl/viewflow.html
+++ b/app/views/tmpl/viewflow.html
@@ -89,7 +89,80 @@ var element = document.getElementById("i");
 element.appendChild(para);
 }
 </script>
-  
+ 
+<!-- <script> 
+
+function fa9(){
+    var para = document.createElement("style");
+var node = document.createTextNode("ul.checkout-bar::before{background-color:green !important}.color7{color:green !important;}ul.checkout-bar li:nth-child(1)::before {    background: green !important;}");
+para.appendChild(node);
+var element = document.getElementById("i");
+element.appendChild(para);
+}
+
+
+function fa10(){
+    var para = document.createElement("style");
+var node = document.createTextNode("ul.checkout-bar::before{background-color:green !important}.color7{color:green !important;}ul.checkout-bar li:nth-child(1)::before {    background: green !important;}");
+para.appendChild(node);
+var element = document.getElementById("i");
+element.appendChild(para);
+}
+
+
+function fa11(){
+    var para = document.createElement("style");
+var node = document.createTextNode("ul.checkout-bar::before{background-color:green !important}.color7{color:green !important;}ul.checkout-bar li:nth-child(1)::before {    background: green !important;}");
+para.appendChild(node);
+var element = document.getElementById("i");
+element.appendChild(para);
+}
+
+
+function fa12(){
+    var para = document.createElement("style");
+var node = document.createTextNode("ul.checkout-bar::before{background-color:green !important}.color7{color:green !important;}ul.checkout-bar li:nth-child(1)::before {    background: green !important;}");
+para.appendChild(node);
+var element = document.getElementById("i");
+element.appendChild(para);
+}
+
+
+function fa13(){
+    var para = document.createElement("style");
+var node = document.createTextNode("ul.checkout-bar::before{background-color:green !important}.color7{color:green !important;}ul.checkout-bar li:nth-child(1)::before {    background: green !important;}");
+para.appendChild(node);
+var element = document.getElementById("i");
+element.appendChild(para);
+}
+
+
+function fa14(){
+    var para = document.createElement("style");
+var node = document.createTextNode("ul.checkout-bar::before{background-color:green !important}.color7{color:green !important;}ul.checkout-bar li:nth-child(1)::before {    background: green !important;}");
+para.appendChild(node);
+var element = document.getElementById("i");
+element.appendChild(para);
+}
+
+
+function fa15(){
+    var para = document.createElement("style");
+var node = document.createTextNode("ul.checkout-bar::before{background-color:green !important}.color7{color:green !important;}ul.checkout-bar li:nth-child(1)::before {    background: green !important;}");
+para.appendChild(node);
+var element = document.getElementById("i");
+element.appendChild(para);
+}
+
+function fa16(){
+    var para = document.createElement("style");
+var node = document.createTextNode("ul.checkout-bar::before{background-color:green !important}.color7{color:green !important;}ul.checkout-bar li:nth-child(1)::before {    background: green !important;}");
+para.appendChild(node);
+var element = document.getElementById("i");
+element.appendChild(para);
+}
+
+</script> -->
 
 </p>
 <style>
@@ -560,59 +633,12 @@ border-radius:15px;
   </div>
   <!-- /page header -->
   
-  <!-- 	progress-bar -->
-	
-<!-- 	<div class="checkout-wrap">
-  <ul class="checkout-bar">
 
-    <li class="visited first one">
-      <a style="color:green" onclick="fa1()">Build <br>Initiated</a>
-    </li>
-    
-    <li class="previous visited two">
-	<a class="color1" onclick="fa2()"> Library<br> Detection</a></li>
-    
-    <li class="active four">
-	<a class="color3" onclick="fa4()"> Create <br>Queue</a></li>
-	
-	<li class="active six">
-	<a class="color5" onclick="fa6()">Deploy
- <br>Automation</a>
-	</li>
-      
-  </ul>
-</div> -->
-
-<!-- 	progress-bar -->
-	
-<!-- 	<div class="checkout-wrap">
-  <ul class="checkout-bar">
-
-    <li class="visited first one">
-      <a style="color:green" onclick="fa1()">Build <br>Initiated</a>
-    </li>
-    
-    <li class="previous visited two">
-	<a class="color1" onclick="fa2()"> Library<br> Detection</a></li>
-    
-    <li class="active four">
-	<a class="color3" onclick="fa4()"> Create <br>Queue</a></li>
-	
-	<li class="active six">
-	<a class="color5" onclick="fa6()">Deploy
- <br>Automation</a>
-	</li>
-      
-  </ul>
-</div> -->
  <!-- page content -->
   <div class="pagecontent">
   <section class="tile">
-                        
-			
-			
-			 
-<div class="checkout-wrap" ng-show="status">
+                 	 
+  <div class="checkout-wrap" ng-show="status">
    <br>
   <ul class="checkout-bar" style="margin-bottom:250px">
 
@@ -640,16 +666,68 @@ border-radius:15px;
   </ul>
     <br><br><br><br><br>
 </div>
+</section>
+						
+<!-- progress bar 2 -->
+
+<!-- <div class="pagecontent">
+  <section class="tile">
+                 	 
+  <div class="checkout-wrap" ng-show="status">
+   <br>
+  <ul class="checkout-bar" style="margin-bottom:250px">
+
+    <li class="visited first one">
+	 <a class="color7" onclick="fa9()">Build <br>Initiated</a>
+  </li>
+    
+    <li class="previous visited two">
+	<a class="color1" onclick="fa10()"> Library<br> Detection</a></li>
+    
+    <li class="active four">
+	<a class="color3" onclick="fa11()"> Create <br>Queue</a></li>
+    
+	<li class="active six">
+	<a class="color5" onclick="fa12()">Deploy
+ <br>Automation</a>
+	</li>
+      
+  </ul>
+    <br><br><br><br><br>
+</div>
+</section> -->
 
 
-			
-			
-			
-			
-			
-			
-						  </section>
-						 
+<!-- progress bar 3 -->
+
+  <!-- <div class="pagecontent">
+  <section class="tile">
+                 	 
+  <div class="checkout-wrap" ng-show="status">
+   <br>
+  <ul class="checkout-bar" style="margin-bottom:250px">
+
+    <li class="previous visited two">
+	<a class="color1" onclick="fa13()"> Library<br> Detection</a></li>
+	
+	<li class="active three">
+	<a class="color2" onclick="fa14()">Create Config<br> Services</a></li>
+    
+    <li class="active four">
+	<a class="color3" onclick="fa15()"> Create <br>Queue</a></li>
+    
+	<li class="active six">
+	<a class="color5" onclick="fa16()">Deploy
+ <br>Automation</a>
+	</li>
+      
+  </ul>
+    <br><br><br><br><br>
+</div>
+</section>-->
+
+
+						
 	<div class="row">
                     <!-- col -->
                     <div class="">
@@ -723,8 +801,8 @@ border-radius:15px;
 			<div class="form-group row">
 				<div class="col-sm-6">
 				 <div id="build_envDiv" >
-					<!-- <label for="Build Environment">Build Environment</label> -->
-			   <input class="form-group col-sm-12" id="build_env" type="text" ng-model="build_env" style="display: none;"></input>
+					<!--  <label for="Build Environment">Build Environment</label>
+			   <input class="form-group col-sm-12" id="build_env" type="text" ng-model="build_env" ></input> -->
 				</div> 
 				<div id="svnrepoDiv" >
 					<label for="IIBNode">IIB Node</label>
@@ -736,10 +814,10 @@ border-radius:15px;
 					<label for="BrokerName ">Broker </label>
 					<input class="form-group col-sm-12" id="BrokerName " type="text" ng-model="BrokerName "></input>
 				</div>
-				<div id="password " >
+				<!-- <div id="password " >
                     <label for="password  ">SVN Password  </label>
                     <input class="form-group col-sm-12" id="password  " type="password" ng-model="svnpassword"></input>
-                </div>
+                </div> -->
 				</div>
 				<div class="col-sm-6">
 				
@@ -812,10 +890,10 @@ border-radius:15px;
                     <label for="BrokerName">Bar Version</label>
                    <br> <input class="form-group col-sm-12" id="artifactory_number" type="text" ng-model="artifactory_number"></input>
                 </div>
-				<div id="password " >
+				<!-- <div id="password " >
                     <label for="password  ">SVN Password  </label>
                     <input class="form-group col-sm-12" id="password  " type="password" ng-model="svnpassword"></input>
-                </div>
+                </div> -->
 			</div>
 			<div class="col-sm-6">
 			<div id="svnrepoDiv" >
