--- a/app/views/tmpl/dashboard.html
+++ b/app/views/tmpl/dashboard.html
@@ -379,14 +379,15 @@ document.getElementById("names2").style.backgroundColor="transparent";
 
 
         <!-- tile body -->
-        <div class="tile-body p-0" style="overflow-y:scroll;height:360px;">
+        <div class="tile-body p-0">
 
 
               <div class="tile-header dvd dvd-btm">
                             <h1 class="custom-font">Recent Deployments</h1>
 
                         </div>
-              <table class="table table-no-border m-0">
+			 <div style="height:400px; overflow-y:scroll;">			
+              <table class="table table-no-border m-0" >
                 <tbody>
                   <tr>
                     <th> Flow Name </th>
@@ -397,18 +398,18 @@ document.getElementById("names2").style.backgroundColor="transparent";
                     <th>Executed By </th>
                   </tr>
                   
-				  <tr ng-repeat="x in flowslog  | orderBy: '-updatedDate' | orderBy: '-updatedTime'">
+				  <tr ng-repeat="x in flowslog  | orderBy: '-updatedDate' && orderBy: '-updatedTime'">
 					  <td  ng-click="flow(x.flowname)"><font color="#616f77"><span class="tab"><a style="color:#2368a0 ";>{{x.flowname}}</a></span></font></td>
 					  <td> {{x.updatedDate || ''}} - {{x.updatedTime || ''}}</td>
 					 <td align="center"><!-- {{x.result==null ? "IN PROGRESS": x.result}} -->
 										<span class="{{x.flowstatus == 'SUCCESS' ? 'fa fa-square text-success' : ((x.flowstatus == 'FAILURE' ? 'fa fa-square text-danger' : 'fa fa-square text-warning'))}}"></span></td>
-					  <td><center>{{x.Environment  | uppercase}}</center></td>
+					  <td><center>{{x.Environment | uppercase}}</center></td>
 					  <td>{{x.By}}</td>
 					</tr>
 
                 </tbody>
               </table>
-
+              </div>
 
         </div>
         <!-- /tile body -->
