--- a/app/views/tmpl/interfacelist.html
+++ b/app/views/tmpl/interfacelist.html
@@ -43,8 +43,8 @@
                                       <th> Created Date </th>
                                      <th> Last Updated </th>
                                      
-                                      <th><center>Environment</center></th>
-                                      <th> By </th>
+                                      <th>Environment</th>
+                                      <th> Created By </th>
                                     </tr>
                                    <!--  <tr  >
                                       <td ><a  ui-sref="app.projectbuild"><font color="#616f77"><span class="tab">CLA_CLIENTMISC_ORM</span></font></a></td>
@@ -82,7 +82,7 @@
 										<td  ng-click="viewflow(x.interface_name)"><font color="#616f77"><span class="tab"><a style="cursor:default">{{x.interface_name}}</a></span></font></td>
 										<td>{{x.createdDate || ''}} - {{x.createdtime || ''}} </td>
 										<td>{{x.updatedDate || ''}} - {{x.updatedTime || ''}} </td>
-										<td><center>{{x.Environment | uppercase}}</center></td>
+										<td>{{x.Environment  | uppercase}}</td>
 										<td>{{x.By}}</td>
                                     </tr>
 
